--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "https-proxy-agent": "^7.0.2",
     "node-fetch": "^2.7.0",
+    "ps-list": "^8.1.1",
+    "ps-tree": "^1.2.0",
     "puppeteer": "^21.6.1"
   }
 }
